--- a/card/src/main/res/layout/card_view.xml
+++ b/card/src/main/res/layout/card_view.xml
@@ -16,6 +16,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:layoutDirection="ltr"
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -47,6 +48,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layoutDirection="ltr"
         android:baselineAligned="false"
         android:orientation="horizontal">
 
