--- a/drop-in/src/main/res/layout/payment_methods_list_item.xml
+++ b/drop-in/src/main/res/layout/payment_methods_list_item.xml
@@ -38,7 +38,7 @@
         app:strokeColor="@color/stroke_color"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical">
